# tree-sitter-openai-harmony

./: .editorconfig  .gitignore  .tsqueryrc.json  CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  test.harmony  tree-sitter.json
bindings/go/: binding_test.go
examples/: README.md
examples/edge_cases/: allow_less_than_in_constrain_format.harmony
examples/fleshing/: content_has_tag.harmony
examples/history/no_thinking/: request.harmony
examples/individual/: tool_call_preamble.harmony
examples/requests/full/: full.harmony  request.harmony  response.harmony
examples/tools/: request.harmony
examples/tools/builtin/: browser.harmony  python.harmony
examples/tools/weather/: 2response.harmony  3toolresult.harmony  4prompt_final.harmony  5full.harmony
examples/user_request_01/return/: 2request.harmony  README.md
queries/: injections.scm
test/corpus/: assistant_analysis.test  assistant_commentary_tool_call.test  assistant_final.test  full_tool_use.test  message.user.harmony  message.user.txt  system_message.test
test/corpus/anything_in_text/: assistant_commentary_format_has_less_than.test  content_has_less_than.test  content_has_tag.test
test/corpus/jinja_output/tools/run_command/: 2b-recipient-in-channel.test  2b-recipient-in-role.test
test/corpus/prefill/: missing_channel_name_analysis.test  partial_analysis_then_final.test  partial_on_tool_call_alone.test
test/corpus/standalone/: developer_message_structured_outputs.test  tool_call_preamble.test  user_message.test
