[package]
name = "tree-sitter-harmony"
description = "OpenAI's Harmony Response Format (gptoss)"
version = "0.1.0"
authors = ["Wes Higbee"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "harmony"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/g0t4/tree-sitter-harmony"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
